@@ -10,6 +10,7 @@ Versioning: Latest file will be in blue. Deleted files will be in red.
 Versioning: Version enabled buckets will be displayed in green.
 Upgraded S3 API to 1.9.3
 GUI creates buckets in a background thread to be more responsive.
+GUI deletes buckets in a background thread to be more responsive.
 
 New Features:
 Command-line interface: put, get, delete, makebucket, rmbucket, listbuckets, syncfroms3, and synctos3.
